<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f8f8ff"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/alegreya_sc_bold"
        android:gravity="center_horizontal"
        android:text=" UPN VETERAN YOGYAKARTA "
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/img_upn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/logo_upn"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="110dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:paddingTop="20dp"
            android:textStyle="italic"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="110dp"
            android:inputType="textPassword"
            android:paddingTop="10dp"
            android:hint="@string/password"
            android:textStyle="italic"
            android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="40dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="100dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/register" />
    </RelativeLayout>

</LinearLayout>